--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,27 @@ dependencies:
   provider: ^6.1.2
   go_router: ^13.2.2
   lottie: ^3.1.0
+  amplify_api: ^1.0.0
+  amplify_auth_cognito: ^1.0.0
+  amplify_authenticator: ^1.0.0
+  amplify_flutter: ^1.0.0
+  amplify_storage_s3: ^1.0.0
+  cached_network_image: ^3.3.1
+  flutter_riverpod: ^2.5.1
+  image_picker: ^1.1.0
+  intl: ^0.18.1
+  path: ^1.9.0
+  riverpod_annotation: ^2.3.5
+  uuid: ^4.4.0
 
 dev_dependencies:
+  amplify_lints: ^3.0.0
+  build_runner:
+  custom_lint:
   flutter_test:
     sdk: flutter
-
+  riverpod_generator: ^2.1.3
+  riverpod_lint: ^2.3.10
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
