--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   path: ^1.9.0
   riverpod_annotation: ^2.3.5
   uuid: ^4.4.0
+  flutter_login: ^5.0.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   amplify_lints: ^3.0.0
