--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
   assets:
       - assets/lottie/
       - assets/img/
+      - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
