--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   uuid: ^4.4.0
   flutter_login: ^5.0.0
   flutter_dotenv: ^5.1.0
+  chat_bubbles: ^1.5.0
 
 dev_dependencies:
   amplify_lints: ^3.0.0
